//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.bicloin.hub.grpc;

message BalanceRequest {
  string username = 1;
}

message BalanceResponse {
  int32 balance = 1;
}

message TopUpRequest {
  string username = 1;
  int32 amount = 2;
  string phone = 3;
}

message InfoStationRequest {
  string stationID = 1;
}

message InfoStationResponse {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
  int32 capacity = 4;
  int32 numOfAvailableBikes = 5;
  int32 prize = 6;
  int32 withdrawals = 7;
  int32 deposits = 8;
}

 message LocateStationRequest {
   double latitude = 1;
   double longitude = 2;
   int32 numOfStations = 3;
 }

 message LocateStationResponse {
   repeated string stationIDs = 1; // with length numOfStations
 }

message BikeUpRequest {
  string username = 1;
  string stationID = 2;
  double latitude = 3;
  double longitude = 4;
}

message BikeDownRequest {
  string username = 1;
  string stationID = 2;
  double latitude = 3;
  double longitude = 4;
}

message BikeDownResponse {
  // Replies nothing at all
}

message BikeUpResponse {
  // Replies nothing at all
}

message PingRequest {
}

message PingResponse {
	string outputText = 1;
}

message SysStatusRequest {

}

message SysStatusResponse {
  message Result {
    string path = 1;
    bool isUp = 2;
  }
  repeated Result results = 1;
}
  
service HubService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc top_up(TopUpRequest) returns (BalanceResponse);
  rpc info_station(InfoStationRequest) returns (InfoStationResponse);
  rpc locate_station(LocateStationRequest) returns (LocateStationResponse);
  rpc bike_up(BikeUpRequest) returns (BikeUpResponse);
  rpc bike_down(BikeDownRequest) returns (BikeDownResponse);
  rpc sys_status(SysStatusRequest) returns (SysStatusResponse);
}
